# adk-extra-services

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/artifacts/: .env.example  README.md  csv_agent.py  local_folder_artifact_example.py  s3_artifact_example.py
examples/sessions/: .env.example  README.md  mongodb_session_example.py  redis_session_example.py  uppercase_agent.py
src/adk_extra_services/: __init__.py  __version__.py
src/adk_extra_services/artifacts/: __init__.py  local_folder_artifact_service.py  s3_artifact_service.py
src/adk_extra_services/sessions/: __init__.py  mongo_session_service.py  redis_session_service.py
tests/: test_artifact_service.py  test_session_service.py
